# ShadowEngineGL

./: .gitignore  CMakeLists.txt  README.md
data/: imgui.ini  physx.pxd2  shadow.ini
data/2D/: Font.sfn
data/Actors/: Pose.AAN  Synthoid.act  Walk.AAN
data/Game/: Characters.txt  Effects.txt  Entities.txt  Weapons.txt  characters.yaml  config.txt  config.yaml  effects.yaml  entities.yaml  weapons.yaml
data/Geometry/: Barrel.geo  Col.GEO  Cylindre.3DS  Desk.GEO  Force.GEO  Gun.GEO  Gun1.geo  Sphere.GEO  Wall.3DS  Wall2.GEO  Wall3.GEO  Wall_Corner.GEO  rocket.geo
data/Maps/: Fallout - Copie.txt  Fallout.sgd  Fallout.txt  Fallout.yaml  SciFy - Copie.txt  SciFy.sgd  SciFy.txt  SciFy.yaml  new_map.sgd  new_map.txt
data/Materials/: Barrel.txt  Barrel.yaml  Barrel_police.yaml  Default.txt  Floor.txt  Floor.yaml  Gun1.txt  Gun1.yaml  Police.txt  Police.yaml  Synthoid.txt  Synthoid.yaml  Test.txt  Test.yaml  Wall.txt  Wall.yaml
data/Particles/: Smoke1.txt  Test.txt  smoke.yaml  smoke2.yaml  smoke3.yaml
data/Shaders/: Common.glsl  Copy_ps.glsl  Copy_vs.glsl  SceneInfos.glsl  SkinCommon.glsl  Test01_ps.glsl  Test01_vs.glsl  TestCL_PS.hlsl  TestCL_VS.hlsl  vx2d.glsl  vx3d.glsl  vxbase.glsl  vxskin.glsl
data/Textures/: Police.dds  box.dds  cross.tga
src/: AILib.h  Core.h  GLMedia.h  GameLib.h  MediaCommon.h  NavigationLib.h  ParticleLib.h  PhysicLib.h  R2D.h  SoundLib.h  StdRenderer.h  Version.h  loguru.hpp
src/ai/: AIAgent.cpp  AIAgent.h  AIEvent.h  AIMachine.cpp  AIMachine.h  AIMachineState.h  AISystem.cpp  AISystem.h  AttackIdle.cpp  AttackIdle.h  AttackMachine.cpp  AttackMachine.h  AttackSearch.cpp  AttackSearch.h  AttackTrack.cpp  AttackTrack.h  FollowIdle.cpp  FollowIdle.h  FollowMachine.cpp  FollowMachine.h  FollowSearch.cpp  FollowSearch.h  FollowTrack.cpp  FollowTrack.h  GazeIdle.cpp  GazeIdle.h  GazeMachine.cpp  GazeMachine.h  GazeTrack.cpp  GazeTrack.h  IAICallback.h  Ids.h
src/core/: AnimPRSKeyVal.cpp  AnimPRSKeyVal.h  AnimTracks.cpp  AnimTracks.h  BBox.cpp  BBox2.h  BBox3.h  BSphere.cpp  BSphere.h  Camera.cpp  Camera.h  CharUtil.cpp  CharUtil.h  Color.h  Config.cpp  Config.h  CoreCommon.h  FileSystemFactory.cpp  FileSystemFactory.h  IFile.h  IFileList.cpp  IFileList.h  IFileSystem.cpp  IFileSystem.h  MathUtils.h  Matrix.cpp  Matrix2.h  Matrix3.h  Matrix4.h  MatrixHierarchy.cpp  MatrixHierarchy.h  MatrixTab.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Random.h  Rect.h  ScriptFile.cpp  ScriptFile.h  (+27 more)
src/editor/: CameraTool.cpp  CameraTool.h  Drawer.cpp  Drawer.h  EdCamera.cpp  EdCamera.h  EdEntity.cpp  EdEntity.h  EdEntityTemplate.cpp  EdEntityTemplate.h  EdGeometry.cpp  EdGeometry.h  EdGround.cpp  EdGround.h  EdMap.cpp  EdMap.h  EdMaterial.cpp  EdMaterial.h  EdParticles.cpp  EdParticles.h  EdSolid.cpp  EdSolid.h  EdSolidTemplate.cpp  EdSolidTemplate.h  EdStatic.cpp  EdStatic.h  EditorSystem.cpp  EditorSystem.h  Helpers.cpp  Helpers.h  IEditorElement.h  IResource.h  ITool.cpp  ITool.h  IWindow.cpp  IWindow.h  LightObject.cpp  LightObject.h  MainMenu.cpp  MainMenu.h  (+34 more)
src/game/: Action.h  ActionCreateRandomCharacter.cpp  ActionCreateRandomCharacter.h  ActionServer.cpp  ActionServer.h  ActorACTLoader.cpp  ActorACTLoader.h  ActorAnimLoader.cpp  ActorAnimLoader.h  ActorFileFormat.h  ActorLoader.cpp  ActorLoader.h  AddRemObject.cpp  AddRemObject.h  Ammo.h  BBoxToRect.cpp  BBoxToRect.h  Building.cpp  Building.h  BuildingLight.h  BuildingMesh.h  BuildingTemplate.cpp  BuildingTemplate.h  Character.cpp  Character.h  CharacterDB.cpp  CharacterDB.h  Debris.cpp  Debris.h  Effect.h  EffectDB.cpp  EffectDB.h  EffectFactory.cpp  EffectFactory.h  EntityDB.cpp  EntityDB.h  EntityDynamic.cpp  EntityDynamic.h  EntityExplosive.cpp  EntityExplosive.h  (+124 more)
src/glmedia/: ALSound.cpp  ALSound.h  ALSoundDevice.cpp  ALSoundDevice.h  ALSoundListener.cpp  ALSoundListener.h  ALSoundSource.cpp  ALSoundSource.h  ALSoundVirtualSource.cpp  ALSoundVirtualSource.h  GLConstantBuffer.cpp  GLConstantBuffer.h  GLDefs.h  GLDepthTexture.cpp  GLDepthTexture.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLGeometryBuffer.cpp  GLGeometryBuffer.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLShader.cpp  GLShader.h  GLShadowMap.cpp  GLShadowMap.h  GLSound.h  GLSoundCone.h  GLSoundDevice.h  GLSoundListener.h  GLSoundSource.h  GLSoundVirtualSource.h  GLStates.h  GLTexture.cpp  GLTexture.h  GLVertexBuffer.cpp  GLVertexBuffer.h  GLVideoDevice.cpp  GLVideoDevice.h  Media.cpp  Media.h
src/mediacommon/: Event.h  EventPump.cpp  EventPump.h  IConstantBuffer.h  IDepthTexture.h  IFrameBuffer.h  IGeometryBuffer.h  IIndexBuffer.h  IMedia.cpp  IMedia.h  IMultiVideoDevice.h  IShader.h  IShadowMap.h  ISound.h  ISoundCone.h  ISoundDevice.h  ISoundListener.h  ISoundSource.h  ISoundVirtualSource.h  ITexture.h  IVertexBuffer.h  IVideoDevice.h  IView.h  KeyboardKeys.h  MediaCommon.cpp  VideoDefs.h
src/navigation/: AS_CellItem.h  AS_PathFinder.cpp  AS_PathFinder.h  IPathFinder.h  NavCase.h  NavDefs.h  NavMap.cpp  NavMap.h  NavPath.cpp  NavPath.h  NavRenderer.cpp  NavRenderer.h  Navigation.h
src/particles/: Emitters.cpp  Emitters.h  Engine.cpp  Engine.h  Material.cpp  Material.h  PR_Point.cpp  PR_Point.h  PR_Quad.cpp  PR_Quad.h  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEmitterFactory.cpp  ParticleEmitterFactory.h  ParticleEmitterParams.h  ParticleEmitterTemplate.cpp  ParticleEmitterTemplate.h  ParticleEmitterTemplateFactory.cpp  ParticleEmitterTemplateFactory.h  ParticleEngine.cpp  ParticleEngine.h  ParticleExplosionEmitter.cpp  ParticleExplosionEmitter.h  ParticleLinearEmitter.cpp  ParticleLinearEmitter.h  ParticleMaterial.cpp  ParticleMaterial.h  ParticlePointEmitter.cpp  ParticlePointEmitter.h  ParticlePointEmitterTemplate.cpp  ParticlePointEmitterTemplate.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemTemplate.cpp  ParticleSystemTemplate.h  ParticleTextureSet.cpp  ParticleTextureSet.h  (+10 more)
src/physic/: IPhysicObject.h  Physic.cpp  Physic.h  PhysicActorController.cpp  PhysicActorController.h  PhysicAmmo.cpp  PhysicAmmo.h  PhysicDefs.h  PhysicDynamic.cpp  (+18 more)
(+321 files in other folders)
